# torch_delaunay

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: cxx_unit_test.yaml  pre_commit.yaml  python_build_wheel.yaml  python_unit_test.yaml
benchmark/: CMakeLists.txt  sweephull_benchmark.cc
include/: torchgis.h
include/torch_delaunay/: predicate.h  predicates.h  sweephull.h  torch_delaunay.h  triangle.h
include/torchgis/: cartesian.h  en.h  geometry.h  torchgis.h
include/torchgis/en/: predicates.h  triangle.h  triangle_ops.h
src/: cartesian.cc  predicate.cc  predicates.cc  sweephull.cc  triangle.cc
src/en/: predicates.cc  triangle.cc
test/: CMakeLists.txt  predicate_test.cc  sweephull_test.cc  testing.h  triangle_test.cc
test_fixture/: points.json
torch_delaunay/: __init__.py  functional.py  functional_test.py
torch_delaunay/__bind__/: python_module.cc
torchgis/: cartesian.py  en.py
torchgis/__bind__/: cartesian.cc  en.cc
